--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i18next": "^22.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "notistack": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
